# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-hooks.yml  README.md  pyproject.toml
.github/workflows/: testing-and-coverage.yml
docs/: conf.py  index.rst
src/check_template_version/: check_template_version.py
src/pre_commit_hooks/: __init__.py  check_template_version.py
tests/check_template_version/: test_check_template_version.py
tests/pre_commit_hooks/: .testing-copier-answers.yml  test_check_template_version.py
